# BusCard

./: BCW_WS.eww  BusCard.code-workspace  CMakeLists.txt  CMakePresets.json  README.md  STM32F411CEUX_FLASH.ld  STM32F446RETX_FLASH.ld  main.cpp  rom.h
.github/workflows/: build.yml
Board/: Board.h  ItClases.h  startup.cpp  stm32f411xE.icf
Drivers/: CMakeLists.txt
Drivers/FatFs/src/: ff.h
FreeRTOS-Kernel/portable/GCC/ARM_CM4F/: port.c
Include/: Board.hpp  Cli.hpp  FreeRTOSConfig.h  GPIO.h  GPIO.hpp  Interfaces.hpp  ST7789.hpp  Spi.h  Spi.hpp  TaskManager.hpp  UsbCdc.hpp  cmd_parser.h  usbcdc.hpp
Include/Drivers/: ST7789.hpp
Include/Interfaces/: iLcd.hpp  iSpi.hpp
Include/Tasks/: CliTask.hpp
Include/usb_dev/: usb_device.h  usbd_conf.h
Project/: BCW.ewp  main.h
Source/: Board.cpp  Cli.cpp  FreeRTOS_TaskManager.cpp  ST7789.cpp  Spi.c  TaskManager.cpp  interrupts.cpp
Source/Drivers/: LcdFonts.cpp
Source/usb_dev/: usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c  usbd_storage_if.c
Tasks/: ButtonsTask.hpp  CliTask.hpp  GuiTask.hpp
cmake/: arm-none-eabi.cmake
include/: Board.hpp  BoardButtons.hpp  Cli.hpp  GPIO.h  GPIO.hpp  MainWindow.hpp  Spi.h  Spi.hpp  TaskManager.hpp  UsbCdc.hpp  cmd_parser.hpp  stm32f4xx_hal_conf.h
include/Drivers/: ST7789.hpp
include/Gui/: Button.hpp  Control.hpp  FileManager.hpp  Text.hpp  View.hpp  Window.hpp
include/Utils/: GFXLib.hpp
include/fatfs/: fatfs.h  fatfs_platform.h  ffconf.h
include/usb_dev/: usbd_cdc_if.h
interfaces/: CMakeLists.txt  iDelayer.hpp  iGpio.hpp  iLcd.hpp  iSpi.hpp  iTask.hpp  iUart.hpp
nes_emu/: CMakeLists.txt  nes.cpp  nes.hpp
nes_emu/include/: cpu.h  mem.h  ppu.h
nes_emu/source/: cpu.c  mem.c  nes.cpp  ppu.c
source/: Board.cpp  Cli.cpp  FreeRTOS_TaskManager.cpp  GPIO.c  Spi.c  cmd_parser.c  cmd_parser.cpp
source/Drivers/: LcdFonts.cpp
source/fatfs/: bsp_driver_sd.c  fatfs.c  fatfs_platform.c  sd_diskio.c
source/usb_dev/: usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_storage_if.c
